--- a/src/pages/SummerCup/home/sections/section_two/section_two.module.css
+++ b/src/pages/SummerCup/home/sections/section_two/section_two.module.css
@@ -53,7 +53,7 @@
 .section_two_wrapper .section_two .container .rightItem .image {
   @apply
   w-full
-  max-w-[867px]
+  max-w-[667px]
   flex
   items-center
   justify-center
@@ -82,6 +82,7 @@
     font-[300]
     text-[22px]
     xs:!text-[16px]
+    leading-[2]
     xs:leading-[24px];
 }
 .section_two_wrapper .section_two .container .explain span {
