fixed some change styles and texts

--- a/src/Components/popup/popup.module.css
+++ b/src/Components/popup/popup.module.css
@@ -44,7 +44,7 @@
     @apply
     w-[213.55px]
     h-[170.53px]
-    bg-[#f0a14db4]
+    bg-[#3CB9FF]
     absolute
     right-[43px]
     bottom-[61px]
