--- a/src/Components/section_one_item/section_one_item.module.css
+++ b/src/Components/section_one_item/section_one_item.module.css
@@ -39,7 +39,13 @@
 .section_one_item:last-child {
   @apply mr-0;
 }
-
+.section_one_item:last-child .explain {
+  flex-grow: 1;
+  justify-content: flex-end
+}
+.section_one_item:last-child .explain .number {
+  font-size: 70px;
+}
 .section_one_item .image {
   @apply w-[auto]
     max-w-[100%]
