--- a/src/Components/teams_item/teams_item.module.css
+++ b/src/Components/teams_item/teams_item.module.css
@@ -120,13 +120,39 @@
   min-width: 37px;
   height: 37px;
   border-radius: 50%;
-  background-color: #4d4d4d;
-  color: #9ed7f8;
+  /* background-color: #4d4d4d; */
+  color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 300;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #ffffff;
+  z-index: 1;
+}
+.teams_wrapper .teams .items .item .circle::after {
+  content: "";
+  width: calc(100% - 3px);
+  height: calc(100% - 3px);
+  background-color: rgba(45, 58, 71, 1);
+  position: absolute;
+  z-index: -2;
+  border-radius: 12px;
+}
+.teams_wrapper .teams .items .item .circle::before {
+  content: "";
+  box-shadow: 23px 24px 26px 17px rgba(60, 185, 255, 1, 0.5);
+  @apply absolute
+    w-[18px]
+    h-[18px]
+    opacity-40
+    right-[6px]
+    bottom-[4px]
+    bg-[#3CB9FF]
+    -z-[1]
+    blur-[8px];
 }
 /* .teams_wrapper .teams .items .item::before {
   content: "";
