--- a/src/Components/button_register/button_register.module.css
+++ b/src/Components/button_register/button_register.module.css
@@ -13,7 +13,9 @@
   @apply font-[inherit]
     w-[100%]
     /* max-w-[225px] */
+    max-w-[177px]
     cursor-pointer
+    whitespace-nowrap
     px-[10px]
     py-[5px]
     h-[46px]
