--- a/src/Components/teams_item/teams_item.module.css
+++ b/src/Components/teams_item/teams_item.module.css
@@ -1,12 +1,10 @@
 .teams_wrapper {
-  background: #3CB9FF;
+  background: #3cb9ff;
   @apply w-[100%]
-    /* max-w-[737px] */
     min-h-[165px]
     flex
     flex-col
     items-center
-    /* justify-center */
     p-[30px]
     rounded-[12px]
     xl:mr-[0]
@@ -73,36 +71,18 @@
 
 .teams_wrapper .teams .items .item {
   @apply flex
-    /* w-[154px] */
-    /* mr-[58px]
-    my-[10px] */
     items-center
     justify-start
     leading-[28.32px]
-    /* h-[27px] */
     text-[#ffffff]
     font-[300]
     text-[20px]
     gap-x-[10px]
     whitespace-nowrap;
 }
-/* }
-@media screen and (max-width: 1570px) {
-    .teams_wrapper{
-      @apply
-      max-w-[630px]
-    }
-    .teams_wrapper .teams .items {
-        @apply
-        w-full
-    }
-} */
 .teams_wrapper .teams .items .item p {
   @apply w-fit
-  mr-[10px]
-
-    /* overflow-hidden
-    overflow-ellipsis */;
+  mr-[10px];
 }
 
 .teams_wrapper .teams .items .item span {
@@ -111,16 +91,10 @@
   line-height: 185%;
 }
 
-/* .teams_wrapper .teams .items .item:nth-child(3n) {
-    @apply
-    sm:mr-[0]
-} */
 .teams_wrapper .teams .items .item .circle {
   width: 37px;
-  min-width: 37px;
   height: 37px;
   border-radius: 50%;
-  /* background-color: #4d4d4d; */
   color: #ffffff;
   display: flex;
   align-items: center;
@@ -131,6 +105,9 @@
   overflow: hidden;
   border: 1px solid #ffffff;
   z-index: 1;
+  @apply sm:w-[24px]
+  sm:h-[24px]
+  sm:text-[14px]
 }
 .teams_wrapper .teams .items .item .circle::after {
   content: "";
@@ -154,29 +131,16 @@
     -z-[1]
     blur-[8px];
 }
-/* .teams_wrapper .teams .items .item::before {
-  content: "";
-  @apply w-[37px]
-    h-[37px]
-    min-w-[37px]
-    mr-[10px]
-    bg-[#d9d9d9]
-    rounded-full;
-} */
 .teams_wrapper .teams .items .empty {
   @apply flex
     items-center
     justify-start
     gap-[5px]
-    /* w-[120px] */
-    h-[37px]
-    /* my-[10px]
-    mr-[53px] */;
+    h-[37px];
 }
 .teams_wrapper .teams .items .empty::after {
   content: "";
   @apply w-[100%]
-    /* max-w-[144px] */
     h-[37px]
     border-b-[1px]
     border-b-[#ffffff]
@@ -196,9 +160,7 @@
 @media screen and (max-width: 640px) {
   .teams_wrapper {
     @apply w-full
-        /* min-w-[250px] */
         h-[450px]
-        /* mr-[28px] */
         justify-start;
   }
   .teams_wrapper:last-child {
@@ -213,9 +175,7 @@
   }
   .teams_wrapper .teams .items .item {
     @apply text-[16px]
-        justify-start
-        /* my-[0]
-        mb-[2px] */;
+        justify-start;
   }
   .teams_wrapper .teams .items .empty {
     @apply h-[27px];
