--- a/src/pages/SummerCup/home/sections/sponsors/sponsors.module.css
+++ b/src/pages/SummerCup/home/sections/sponsors/sponsors.module.css
@@ -30,8 +30,8 @@
   justify-between
   items-center
   flex-wrap
-  gap-4
-  w-full
+  sm:justify-around
+  sm:gap-[58px]
 }
 
 .sponsers .sponsor {
